[package]
name = "psbattletools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gjson = "0.8.0"
indexmap = "1.7.0"
lazy_static = "1.4.0"
prettytable-rs = "0.8.0"
rayon = "1.5.1"
structopt = "0.3.23"
