[package]
name = "psbattletools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gjson = "0.8.0"
indexmap = "1.7.0"
lazy_static = "1.4.0"
pikkr-annika = "0.16.1"
prettytable-rs = "0.8.0"
rayon = "1.5.1"
regex = "1.5.4"
serde_json = "1.0.68"
structopt = "0.3.23"
tests = { path = "./tests" }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["prepush-hook", "run-cargo-clippy", "run-cargo-fmt"] }

[features]
bench_old_battlesearch = []
bench_old_winrates = []
bench_old_anonbattle = []