[package]
name = "psbattletools"
version = "0.1.0"
edition = "2021"
description = "Command-line program to manage Pokémon Showdown battle logs."
license = "MIT"
repository = "https://github.com/AnnikaCodes/psbattletools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gjson = "0.8.0"
indexmap = "1.7.0"
json = "0.12.4"
lazy_static = "1.4.0"
prettytable-rs = "0.8.0"
rayon = "1.5.1"
regex = "1.5.4"
structopt = "0.3.23"

[dev-dependencies]
tests = { path = "./tests" }
cargo-husky = { version = "1", default-features = false, features = ["prepush-hook", "run-cargo-clippy", "run-cargo-fmt"] }
serial_test = "0.5.1"

[features]
bench_old_battlesearch = []
bench_old_winrates = []
bench_old_anonbattle = []
